Removed methods from SourcesManager with @Beta mark, added BungeeConfig, reorganised Files